Bug 331543 - New event dialog has "Calendar:" misplaced in tab order
Summary: New event dialog has "Calendar:" misplaced in tab order
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.3
Platform: Debian testing Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-26 18:05 UTC by Wouter M. Koolen
Modified: 2022-04-04 21:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wouter M. Koolen 2014-02-26 18:05:04 UTC
I have several calendars. When entering a new event, I need to choose which one to place the event in. When the new event dialog comes up, the "Title:" text box has keyboard focus. I expect that pressing Shift+Tab will bring me to the "Calendar:" dropdown list, which is visually the previous field. However it brings me to the "Cancel" button.

The "Calendar:" dropdown seems to be placed in Tab order between "Access:" and "Templates...", which is rather unexpected. Perhaps this is where the calendar selection once sat visually.
Comment 1 Laurent Montel 2014-06-26 11:25:27 UTC
Git commit 7b473e51024c210bf3ce468a4af08f692fb09519 by Montel Laurent.
Committed on 26/06/2014 at 11:23.
Pushed by mlaurent into branch 'KDE/4.13'.

Fix Bug 331543 - New event dialog has "Calendar:" misplaced in tab order

M  +200  -43   incidenceeditor-ng/dialogdesktop.ui

http://commits.kde.org/kdepim/7b473e51024c210bf3ce468a4af08f692fb09519
Comment 2 Denis Kurz 2016-09-24 18:52:08 UTC
This bug has only been reported for versions before 4.14, which have been unsupported for at least two years now. Can anyone tell if this bug still present?

If noone confirms this bug for a Framework-based version of korganizer (version 5.0 or later, as part of KDE Applications 15.08 or later), it gets closed in about three months.
Comment 3 Wouter M. Koolen 2016-09-26 08:37:01 UTC
Dear Denis,

Nothing has changed regarding this bug. I can confirm it for Korganizer 
5.2.3.

To hit it, start creating a new event by double clicking anywhere on the 
calendar. The New Event dialog comes up, with the keyboard focus in a 
text field labelled "Title". Now press shift-tab. You expect to be in 
the calendar dropdown list, but the focus jump straight to the cancel 
button.

Cheers,

Wouter


On 25/09/16 03:52, Denis Kurz via KDE Bugzilla wrote:
> https://bugs.kde.org/show_bug.cgi?id=331543
>
> Denis Kurz <kdenis@posteo.de> changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>               Status|UNCONFIRMED                 |NEEDSINFO
>           Resolution|---                         |WAITINGFORINFO
>
> --- Comment #2 from Denis Kurz <kdenis@posteo.de> ---
> This bug has only been reported for versions before 4.14, which have been
> unsupported for at least two years now. Can anyone tell if this bug still
> present?
>
> If noone confirms this bug for a Framework-based version of korganizer (version
> 5.0 or later, as part of KDE Applications 15.08 or later), it gets closed in
> about three months.
>
Comment 4 Denis Kurz 2016-09-26 17:50:33 UTC
Wouter, that's strange. I tried to reproduce it myself, and it works for me, in KOrganizer 5.3.1. Double click + shift+tab, and the focus jumps to the calendar dropdown. Since there's been very little activity in KOrganizer lately, I don't think that this was fixed recently.

Does KOrganizer itself report the version 5.2.3 for you? You can get it to report its version by launching it standalone (not as part of Kontact), and then via "Help -> About KOrganizer", in the Version tab. Or maybe you only have one calendar configured?
Comment 5 Wouter M. Koolen 2016-09-26 23:52:58 UTC
On 27/09/16 02:50, Denis Kurz via KDE Bugzilla wrote:
> https://bugs.kde.org/show_bug.cgi?id=331543
>
> Denis Kurz <kdenis@posteo.de> changed:
>
>             What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                   CC|                            |kdenis@posteo.de
>
> --- Comment #4 from Denis Kurz <kdenis@posteo.de> ---
> Wouter, that's strange. I tried to reproduce it myself, and it works for me, in
> KOrganizer 5.3.1. Double click + shift+tab, and the focus jumps to the calendar
> dropdown. Since there's been very little activity in KOrganizer lately, I don't
> think that this was fixed recently.
>
> Does KOrganizer itself report the version 5.2.3 for you? You can get it to
> report its version by launching it standalone (not as part of Kontact), and
> then via "Help -> About KOrganizer", in the Version tab. Or maybe you only have
> one calendar configured?
>

Dear Denis,

That is wild :) There must be some crucial difference between our 
setups. I do not see it yet though.

I am starting korganizer from bash (in kopete). I got my version number 
from the about dialog, as you describe.

I have 5 calendards configured, so that is not it either.

I tried LC_ALL=C LANGUAGE=en_US:en korganizer (since I have some of 
these set to a mix of GB and NL) but that did not change anything.

Below is the output from reportbug korganizer, it should show the 
current installed version of all related packages. Maybe you can compare 
to yours and spot the crucial diff.

Any other ideas?

Cheers,

Wouter




Package: korganizer
Version: 4:16.04.3-1

-- System Information:
Debian Release: stretch/sid
   APT prefers testing
   APT policy: (990, 'testing'), (500, 'stable-updates'), (500, 
'unstable'), (500, 'stable'), (1, 'experimental')
Architecture: amd64 (x86_64)
Foreign Architectures: i386

Kernel: Linux 4.7.5+ (SMP w/8 CPU cores)
Locale: LANG=en_US.UTF-8, LC_CTYPE=en_US.UTF-8 (charmap=UTF-8)
Shell: /bin/sh linked to /bin/dash
Init: systemd (via /run/systemd/system)

Versions of packages korganizer depends on:
ii  kdepim-runtime               4:16.04.2-2
ii  kf5-kdepimlibs-kio-plugins   4:16.04.2-2
ii  libc6                        2.23-5
ii  libgcc1                      1:6.1.1-11
ii  libkf5akonadicalendar5       16.04.2-2
ii  libkf5akonadicontact5        4:16.04.2-2
ii  libkf5akonadicore-bin        4:16.04.3-2
ii  libkf5akonadicore5           4:16.04.3-2
ii  libkf5akonadimime5           4:16.04.2-2
ii  libkf5akonadinotes5          4:16.04.2-2
ii  libkf5akonadisearchpim5      16.04.2-2
ii  libkf5akonadiwidgets5        4:16.04.3-2
ii  libkf5calendarcore5          4:16.04.2-1
ii  libkf5calendarsupport5       4:16.04.2-2
ii  libkf5calendarutils5         16.04.3-1
ii  libkf5codecs5                5.25.0-1
ii  libkf5completion5            5.25.0-1
ii  libkf5configcore5            5.25.0-1
ii  libkf5configgui5             5.25.0-1
ii  libkf5configwidgets5         5.25.0-1
ii  libkf5contacts5              16.04.2-1
ii  libkf5coreaddons5            5.25.0-1
ii  libkf5dbusaddons5            5.25.0-1
ii  libkf5eventviews5            4:16.04.2-2
ii  libkf5holidays5              16.04.2-1
ii  libkf5i18n5                  5.25.0-1
ii  libkf5iconthemes5            5.25.0-1
ii  libkf5identitymanagement5    16.04.2-1
ii  libkf5incidenceeditor-bin    16.04.2-2
ii  libkf5incidenceeditor5       16.04.2-2
ii  libkf5itemmodels5            5.25.0-1
ii  libkf5itemviews5             5.25.0-1
ii  libkf5jobwidgets5            5.25.0-1
ii  libkf5kcmutils5              5.25.0-1
ii  libkf5kdelibs4support5       5.25.0-1
pn  libkf5kdepimdbusinterfaces5  <none>
ii  libkf5kiocore5               5.25.0-1
ii  libkf5kiowidgets5            5.25.0-1
ii  libkf5kontactinterface5      16.04.2-1
ii  libkf5libkdepim-plugins      4:16.04.2-3
ii  libkf5libkdepim5             4:16.04.2-3
pn  libkf5mailcommon-plugins     <none>
pn  libkf5mailcommon5            <none>
ii  libkf5mailtransport5         16.04.2-2
ii  libkf5mime5                  16.04.2-1
ii  libkf5newstuff5              5.25.0-1
ii  libkf5notifications5         5.25.0-1
ii  libkf5parts5                 5.25.0-1
ii  libkf5pimcommon-plugins      4:16.04.2-2
ii  libkf5pimcommon5             4:16.04.2-2
ii  libkf5pimtextedit5           16.04.2-1
ii  libkf5service-bin            5.25.0-1
ii  libkf5service5               5.25.0-1
ii  libkf5widgetsaddons5         5.25.0-1
ii  libkf5windowsystem5          5.25.0-1
ii  libkf5xmlgui5                5.25.0-1
ii  libphonon4qt5-4              4:4.9.0-4
ii  libqt5core5a                 5.6.1+dfsg-3+b1
ii  libqt5dbus5                  5.6.1+dfsg-3+b1
ii  libqt5gui5                   5.6.1+dfsg-3+b1
ii  libqt5widgets5               5.6.1+dfsg-3+b1
ii  libstdc++6                   6.1.1-11
ii  phonon4qt5                   4:4.9.0-4

Versions of packages korganizer recommends:
ii  kdepim-doc  4:16.04.3-1

korganizer suggests no packages.

-- no debconf information
Comment 6 Denis Kurz 2016-09-27 06:15:17 UTC
I have frameworks 5.26 and korganizer 5.3.1 installed. Our Qt versions match (5.6.1). Let's just hope that some changes escaped me and this is resolved in recent releases. I'll set this to confirmed for now, since otherwise, it would be closed by my NEEDSINFO purging rampage in December ;-)
Comment 7 gjditchfield 2022-04-04 21:43:41 UTC
Git commit 4c561994aef353b82a7032e5b0111ceb42e9ab32 by Glen Ditchfield, on behalf of Glen Ditchfield.
Committed on 04/04/2022 at 16:30.
Pushed by gditchfield into branch 'release/22.04'.

Fix keyboard focus-change order

With version 5.19.3, using the keyboard to move between the Calendar and
Summary fields is a bit off.

* Generally the user must press `Tab` or `Shift-Tab` twice.  Removing
  some properties from the Category label fixes that, and also removes
  an underline from the 'd' in the 'Calendar' label.

* If the Attachments tab is visible, the user must press the key three
  times;  focus moves to the attachment list before reaching the final
  destination.  Adding a `setTabOrder()` fixes that.

M  +1    -0    src/incidenceattachment.cpp
M  +0    -6    src/ui/dialogdesktop.ui

https://invent.kde.org/pim/incidenceeditor/commit/4c561994aef353b82a7032e5b0111ceb42e9ab32