Fix keyboard focus-change order

With version 5.19.3, using the keyboard to move between the Calendar and
Summary fields is a bit off.

* Generally the user must press `Tab` or `Shift-Tab` twice.  Removing
  some properties from the Category label fixes that, and also removes
  an underline from the 'd' in the 'Calendar' label.

* If the Attachments tab is visible, the user must press the key three
  times;  focus moves to the attachment list before reaching the final
  destination.  Adding a `setTabOrder()` fixes that.

BUG: 331543